# CmakeUserFilterWindows

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: MyOwnFilter.h
sources/: MyOwnFilter.cpp
